# agent-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/agents/: agent.h  github_client.h  llm_client.h  message.h  runtime.h
mcp/: CMakeLists.txt  README.md
mcp/include/halo_mcp/: bus_bridge.hpp  stdio_server.hpp  tool_registry.hpp
mcp/src/: bus_bridge.cc  main.cc  stdio_server.cc  tool_registry.cc
specialists/: anvil.cpp  carpenter.cpp  cartograph.cpp  echo_ear.cpp  echo_mouth.cpp  forge.cpp  gateway.cpp  google_sommelier.cpp  herald.cpp  librarian.cpp  magistrate.cpp  muse.cpp  planner.cpp  quartermaster.cpp  scribe.cpp  sentinel.cpp  sommelier.cpp  stdout_sink.cpp  warden.cpp
src/: main.cpp  runtime.cpp
tests/: test_runtime.cpp
